--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,7 @@ set -g default-terminal "screen-256color"
 
 # set default shell
 #set -g default-command "exec /bin/bash"
+set -g default-command /usr/bin/zsh
 set -g default-shell /bin/zsh
 
 
@@ -71,7 +72,7 @@ set -g status-right '#[fg=colour245]  %R  %d %b #[fg=colour2,bg=colour234,
 set -g status-right '#[fg=colour245]  %R  %d %b #[fg=colour255,bg=colour234,nobold]#[fg=colour16,bg=colour254,bold] #h '
 set -g window-status-format "#[fg=white,bg=colour234] #I #W "
 set -g window-status-current-format "#[fg=colour234,bg=colour22]#[fg=colour16,bg=colour22,noreverse,bold] #I  #W #F #[fg=colour22,bg=colour234,nobold]"
-set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour16,bg=colour39,noreverse,bold] #I  #W #F #[fg=colour39,bg=colour234,nobold]"
+set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour16,bg=colour39,noreverse,bold] #I  #W #F #[fg=colour39,bg=colour234,nobold]"
 
 # Activity
 setw -g monitor-activity on
