C-a-a to green theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,7 @@
 # Use C-a instead of C-b as the prefix
-bind-key C-a send-prefix
+set -g prefix C-b
+unbind-key C-a
+bind-key C-b send-prefix
 
 #set 256 colors
 set -g default-terminal "screen-256color"
