No zsh but bash

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,8 +11,8 @@ set -g default-terminal "screen-256color"
 
 # set default shell
 #set -g default-command "exec /bin/bash"
-set -g default-command /usr/bin/zsh
-set -g default-shell /bin/zsh
+set -g default-command /usr/bin/bash
+set -g default-shell /bin/bash
 
 
 set -g display-time 2000
