--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,7 @@ bind-key C-b send-prefix
 set -g default-terminal "screen-256color"
 
 # set default shell
-set -g default-shell /bin/zsh
+set -g default-shell /bin/bash
 
 set -g display-time 2000
 
