--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ set -g default-terminal "screen-256color"
 
 # set default shell
 #set -g default-command "exec /bin/bash"
-set -g default-command /usr/bin/bash
+set -g default-command /bin/bash
 set -g default-shell /bin/bash
 
 
