--- a/tmux.conf
+++ b/tmux.conf
@@ -1,13 +1,11 @@
 # Use C-a instead of C-b as the prefix
-set -g prefix C-b
-unbind-key C-a
-bind-key C-b send-prefix
+bind-key C-a send-prefix
 
 #set 256 colors
 set -g default-terminal "screen-256color"
 
 # set default shell
-set -g default-shell /bin/bash
+set -g default-shell /bin/zsh
 
 set -g display-time 2000
 
