--- a/tmux.conf
+++ b/tmux.conf
@@ -1,82 +1,21 @@
-# Use C-a instead of C-b as the prefix
+#load style config
+source-file ${HOME}/.tmux/plugins/tmux-themepack/powerline/block/red.tmuxtheme
+
+#Use C-a instead of C-b as the prefix
+set -g prefix C-a
+unbind-key C-b
 bind-key C-a send-prefix
 
-#set 256 colors
-set -g default-terminal "screen-256color"
+#set default shell
+set -g default-command /bin/bash
+set -g default-shell /bin/bash
 
-# set default shell
-set -g default-shell /bin/zsh
-
-set -g display-time 2000
-
-# set vi style key binding
-set -g status-keys vi
-setw -g mode-keys vi
-
-# be more responsive, changing the default delay
-set -sg escape-time 1
-
-# set scrollback
-set -g history-limit 10000
-
-# Start numbering at 1
-set -g base-index 1
-setw -g pane-base-index 1
-
-# force a reload of the config file
+#force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf  \; display "Reloaded!"
 
-# automatic window renaming
+#automatic window renaming
 set-option -g allow-rename off
 
-# aggresive resize
+#aggresive resize
 setw -g aggressive-resize on
-
-# Saner splitting.
-bind v split-window -h
-bind s split-window -v
-bind S choose-session
-
-# Pane resizing
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# set colors
-set -g status-bg colour234
-set -g window-status-activity-attr bold
-set -g pane-border-fg colour245
-set -g pane-active-border-fg colour39
-set -g message-fg colour16
-set -g message-bg colour221
-set -g message-attr bold
-
-# Custom status bar
-# Powerline symbols:     
-set -g status-left-length 32
-set -g status-right-length 150
-set -g status-interval 2
-
-set -g status-left '#[fg=colour15,bg=colour238,bold] #S #[fg=colour238,bg=colour234,nobold]'
-set -g status-right '#[fg=colour245]  %R  %d %b #[fg=colour196,bg=colour234,nobold]#[fg=colour16,bg=colour196,bold] #h '
-set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-set -g window-status-current-format "#[fg=colour234,bg=colour196]#[fg=colour16,bg=colour196,noreverse,bold] #I  #W #F #[fg=colour196,bg=colour234,nobold]"
-
-# Activity
-setw -g monitor-activity on
-set -g visual-activity on
-
-# Mouse stuff
-# setw -g mouse off
-
-# Log output to a text file on demand
-bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
-
-# move between panes
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-#Contact GitHub API Training Shop Blog About
