--- a/tmux.conf
+++ b/tmux.conf
@@ -7,8 +7,8 @@ unbind-key C-b
 bind-key C-a send-prefix
 
 #set default shell
-set -g default-command /bin/bash
-set -g default-shell /bin/bash
+set -g default-command /bin/zsh
+set -g default-shell /bin/zsh
 
 #force a reload of the config file
 unbind r
